apps/base/demo/app/whereami/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: demo
  labels:
    gateway: external-http
spec:
  hostnames:
  - "team-alpha.endpoints.devops-melb-24-436709.cloud.goog"
  parentRefs:
    - name: team-alpha-external-http
      namespace: team-alpha-tenant
  rules:
    - matches:
        - headers:
            - name: env
              value: canary
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: whereami-canary
          port: 80
    - backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: whereami
          port: 80
